<resources>
    <string name="app_name">PS_Avto</string>
    <string name="transport_menu">ТРАСПОРТ</string>
    <string name="spares_menu">ЗАПЧАСТИ</string>
    <string name="services_menu">УСЛУГИ</string>
    <string name="cars_btn">Легковые</string>
    <string name="special_cars_btn">Специальные</string>
    <string name="motorcycle_btn">Мотоциклы</string>
    <string name="text_ads">Машина в хорошем состоянии,салон в хорошем состоянии не прокуренный,кузов без гнили и ржавчины,полностью оцинкованный. По тех части заменил впрыск,надо решить вопрос с холостыми,закупил запчасти для передней подвески холостыми,закупил запчасти для передней подвески,нужно поставить,залито подвески холостыми,закупил запчасти для передней подвески,нужно поставить,залито подвески холостыми,закупил запчасти для передней подвески,нужно поставить,залито подвески холостыми,закупил запчасти для передней подвески,нужно поставить,залито подвески холостыми,закупил запчасти для передней подвески,нужно поставить,залито подвески холостыми,закупил запчасти для передней подвески,нужно поставить,залито подвески холостыми,закупил запчасти для передней подвески,нужно поставить,залито полностбю на ходу Уедет хоть куда</string>
</resources>
