<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:minHeight="?attr/actionBarSize"
    android:background="@color/bottom_navigation_item_background_colors">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:layout_weight="5">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="top"
                    android:src="@drawable/flag">
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/auto"
                    android:layout_gravity="center">

                </ImageView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/transportBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:onClick="onClickToolBarMenu"
                android:fontFamily="@font/roboto"
                android:background="@drawable/top_select_button"
                android:text="@string/transport_menu" />

            <Button
                android:id="@+id/sparesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:paddingBottom="10dp"
                android:onClick="onClickToolBarMenu"
                android:background="@drawable/top_no_select_button"
                android:text="@string/spares_menu" />

            <Button
                android:id="@+id/servicesBtn"
                android:fontFamily="@font/roboto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:background="@drawable/top_no_select_button"
                android:layout_weight="1"
                android:onClick="onClickToolBarMenu"
                android:text="@string/services_menu" />
        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.Toolbar>