<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/HistoryRecyclerView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </androidx.recyclerview.widget.RecyclerView>

            <TableRow
                android:id="@+id/typeCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/HistoryRecyclerView1">

                <Button
                    android:id="@+id/cars_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:textColor="#FFF"
                    android:fontFamily="@font/roboto_bold"
                    android:textAllCaps="false"
                    android:background="@drawable/left_type_btn_select"
                    android:text="@string/cars_btn" />

                <Button
                    android:id="@+id/special_cars_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="#B4B4B4"
                    android:textAllCaps="false"
                    android:background="@drawable/main_type_btn_no_select"
                    android:text="@string/special_cars_btn" />

                <Button
                    android:id="@+id/motorcycle_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:textAllCaps="false"
                    android:textColor="#B4B4B4"
                    android:background="@drawable/right_type_btn_no_select"
                    android:text="@string/motorcycle_btn" />
            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/TransportRecyclerView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeCar"></androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF">
            <View
                android:id="@+id/line1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="40dp"
                android:layout_height="0.5px"
                android:background="#C4C4C4"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            </View>
            <LinearLayout
                android:id="@+id/MarkAndModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/line1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Марка и модель"
                    android:textColor="#735AF6"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="17dp"
                    android:layout_weight="2" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/tesla_vector_16_original"
                    android:layout_weight="10">
                </ImageView>
            </LinearLayout>
            <View
                android:id="@+id/line2"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/MarkAndModel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="0.5px"
                android:background="#C4C4C4">
            </View>

            <LinearLayout
                android:id="@+id/Setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/line2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Параметры"
                    android:textColor="#735AF6"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="17dp"
                    android:layout_weight="2"  />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/setting_png"
                    android:layout_weight="10">
                </ImageView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#747474"
            android:textSize="13dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="ПОСЛЕДНИЕ ПОИСКИ">
        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lastSearchRecyclerView"
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#FFF">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carsRecyclerView"
                android:layout_width="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerView3"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carsRecyclerView">
            </androidx.recyclerview.widget.RecyclerView>

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="40dp"
                android:layout_height="0.5px"
                android:background="#C4C4C4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RecyclerView3" >
            </View>
            <TextView
                android:id="@+id/textBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Учебник"
                android:textSize="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line4" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/TextBookRecyclerView"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBook"
                android:paddingBottom="100dp">
            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>